--- a/src/app/beat-module/pateolmen-beat-status/pateolmen-beat-status.component.html
+++ b/src/app/beat-module/pateolmen-beat-status/pateolmen-beat-status.component.html
@@ -1,3 +1,71 @@
-<p>
-  pateolmen-beat-status works!
-</p>
+<div class="content-section">
+  <mat-card class="example-card">
+    <div class="row">
+      <div class="col-md-12">
+      <mat-card-header> 
+        <mat-card-title>PATROLMEN BEAT STATUS</mat-card-title>
+        <!-- <button (click)="showSuccess()">showSuccess</button> -->
+      </mat-card-header>
+      </div>
+    </div>
+    
+    <mat-card-content  style="background: ghostwhite; ">
+      <div class="example-container mat-elevation-z8">
+        <table mat-table [dataSource]="dataSource">
+
+          <ng-container matColumnDef="DeviceId">
+            <th mat-header-cell *matHeaderCellDef> Device Imei </th>
+            <td mat-cell *matCellDef="let row"> {{row.studentId}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="KmStart">
+            <th mat-header-cell *matHeaderCellDef> Km Start </th>
+            <td mat-cell *matCellDef="let row"> {{row.kmStart}} </td>
+          </ng-container>
+        
+          <ng-container matColumnDef="KmEnd">
+            <th mat-header-cell *matHeaderCellDef >Km End</th>
+            <td mat-cell *matCellDef="let row"> {{row.kmEnd}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="SectionName">
+              <th mat-header-cell *matHeaderCellDef >Section Name</th>
+              <td mat-cell *matCellDef="let row"> {{row.sectionName}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="VerificationDate">
+            <th mat-header-cell *matHeaderCellDef > Verification Date</th>
+            <td mat-cell *matCellDef="let row"> 
+              <!-- {{row.SectionName}}  -->
+            </td>
+          </ng-container>
+
+          <ng-container matColumnDef="status">
+            <th mat-header-cell *matHeaderCellDef> Approve-Status </th>
+            <td mat-cell *matCellDef="let row">
+                  <ng-container *ngIf="row.isApprove==true;else notApproved">
+                  <span style="color: darkgreen; font-weight: 500;" matTooltip="Approved">
+                    Approved
+                  </span>
+                  </ng-container>
+                  <ng-template #notApproved>
+                  <ng-container  *ngIf="row.isApprove == false" >
+                    Not Approved
+                  </ng-container>
+                </ng-template>
+            </td>
+          </ng-container>
+
+          <tr mat-header-row *matHeaderRowDef="tableHeader;"></tr>
+          <tr mat-row *matRowDef="let row; columns: tableHeader;"></tr>
+      </table>
+      </div>
+    </mat-card-content>
+  </mat-card>
+  <ngx-loading [show]="loading" [config]="{ animationType: ngxLoadingAnimationTypes.wanderingCubes, backdropBorderRadius: '3px'}" [template]="customLoadingTemplate"></ngx-loading>
+      <ng-template #customLoadingTemplate>
+          <!-- <div class="loader">
+              <img [src]="'../assets/PTLogo.png'">
+          </div> -->
+      </ng-template>
+</div>
