--- a/src/app/patrolmen-single-beat/patrolmen-single-beat.component.html
+++ b/src/app/patrolmen-single-beat/patrolmen-single-beat.component.html
@@ -12,7 +12,7 @@
             </div>
 
             <div class="col-md-6" style="margin-bottom:10px; text-align: center;">
-              <strong style="font-size: 20px;">Keymen Beat Insert</strong>
+              <strong style="font-size: 20px;">Patrolmen Single Beat Insert/Update</strong>
             </div>
 
             <div class="col-md-3 float-right" style="margin-bottom:10px">
