--- a/src/app/beat-module/all-keymen-existing-beat/all-keymen-existing-beat.component.html
+++ b/src/app/beat-module/all-keymen-existing-beat/all-keymen-existing-beat.component.html
@@ -1,13 +1,37 @@
 <div class="content-section">
-  <mat-card class="example-card">
     <div class="row">
       <div class="col-md-12">
-      <mat-card-header> 
-        <mat-card-title>KEYMAN BEAT STATUS</mat-card-title>
-      </mat-card-header>
+        <mat-card class="beat-card-two">
+        <mat-card-content class="beat-card-content-two">
+          <div class="row" style="margin-bottom:10px">
+            <div class="col-md-3" style="margin-bottom:10px">
+              <mat-form-field style="width: 100%">
+                <input type="search" matInput (keyup)="applyFilter($event.target.value)" placeholder="Search">
+              </mat-form-field>
+            </div>
+
+            <div class="col-md-6" style="margin-bottom:10px; text-align: center;">
+              <strong style="font-size: 20px;">All Keymen Beats</strong>
+            </div>
+
+            <div class="col-md-3" style="margin-bottom:10px">
+              <!-- <div class="row">
+                <div class="col-md-6"> -->
+                  <button mat-raised-button style="background: #09a0a0; color: white; float: right;">
+                    <a style="color: white;" [routerLink]="['/keymen-beat-update']">
+                     Add/Update Beat
+                    </a>
+                  </button>
+            </div>
+          </div>
+        </mat-card-content>
+      </mat-card>
+      <!-- <mat-card-header> 
+        <mat-card-title>ALL KEYMAN BEATS</mat-card-title>
+      </mat-card-header> -->
       </div>
     </div>
-    
+  <mat-card class="example-card">
     <mat-card-content  style="background: ghostwhite; margin-bottom: 40px;">
       <div class="example-container mat-elevation-z8">
         <table mat-table [dataSource]="dataSource">
@@ -32,22 +56,9 @@
               <td mat-cell *matCellDef="let row"> {{row.SectionName}} </td>
           </ng-container>
 
-          <ng-container matColumnDef="VerificationDate">
-            <th mat-header-cell *matHeaderCellDef > Verification Date</th>
-            <td mat-cell *matCellDef="let row"> 
-              <!-- {{row.ApprovedDate | date}}  -->
-              <ng-container *ngIf="row.ApprovedDate;else noApprovedDate">
-                <span>
-                  {{row.ApprovedDate | date}}
-                </span>
-                </ng-container>
-                <ng-template #noApprovedDate>
-                <ng-container>  -- </ng-container>
-              </ng-template>
-            </td>
-          </ng-container>
+         
 
-          <ng-container matColumnDef="status">
+          <!-- <ng-container matColumnDef="status">
             <th mat-header-cell *matHeaderCellDef> Approve-Status </th>
             <td mat-cell *matCellDef="let row">
                   <ng-container *ngIf="row.isApprove==true;else notApproved">
@@ -63,7 +74,7 @@
                   </ng-container>
                 </ng-template>
             </td>
-          </ng-container>
+          </ng-container> -->
 
           <tr mat-header-row *matHeaderRowDef="tableHeader;"></tr>
           <tr mat-row *matRowDef="let row; columns: tableHeader;"></tr>
