--- a/src/app/beat-module/keymen-beat-status/keymen-beat-status.component.css
+++ b/src/app/beat-module/keymen-beat-status/keymen-beat-status.component.css
@@ -9,16 +9,18 @@ table {
   font-size: 18px;
   /* text-align: center !important; */
 }
-td.mat-column-DeviceId, td.mat-column-KmStart,
+td.mat-column-DeviceName, td.mat-column-KmStart,
  td.mat-column-KmEnd, td.mat-column-SectionName,  td.mat-column-status, th.mat-column-VerificationDate
  {
   border-right: 1px solid #e0e0e0;
   padding-left: 10px;
   padding-right: 10px;
   text-align: center;
+  font-size: 15px;
+  font-weight: 500;
 }
 
-th.mat-column-DeviceId, th.mat-column-KmStart,
+th.mat-column-DeviceName, th.mat-column-KmStart,
 th.mat-column-KmEnd, th.mat-column-SectionName,  th.mat-column-status, th.mat-column-VerificationDate
 {
  border-right: 1px solid #e0e0e0;
@@ -27,4 +29,17 @@ th.mat-column-KmEnd, th.mat-column-SectionName,  th.mat-column-status, th.mat-co
  text-align: center;
  background-color: grey;
  color: white;
+ font-size: 15px;
+ font-weight: 500;
+}
+
+th.mat-header-cell:last-of-type, td.mat-cell:last-of-type {
+  padding-left: 10px;
+  padding-right: 10px;
+  text-align: center;
+  font-weight: 500;
+}
+
+input {
+  font-size: 18px;
 }
