--- a/src/app/beat-module/pateolmen-username-dialog/pateolmen-username-dialog.component.html
+++ b/src/app/beat-module/pateolmen-username-dialog/pateolmen-username-dialog.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="patrolmenUserBeatForm">
   <div mat-dialog-content>
     <div class="row">
-      <mat-form-field>
+      <mat-form-field style="width: 100%">
         <mat-label>Username</mat-label>
         <input type="text" matInput formControlName="name" placeholder="Your Name">
         <mat-icon matSuffix> person_pin </mat-icon>
@@ -10,12 +10,23 @@
     </div>
 
     <div class="row">
-      <mat-form-field>
+      <mat-form-field style="width: 100%">
         <mat-label>Contact Number</mat-label>
         <input type="text" matInput formControlName="contactNo" placeholder="Contact No.">
         <mat-icon matSuffix> phone_in_talk </mat-icon>
         <mat-error>This is required.</mat-error>
       </mat-form-field>
+    </div>
+
+    <div class="row">
+      <!-- <div class="col-md-12"> -->
+        <mat-form-field style="width: 100%">
+          <mat-label>Email Id</mat-label>
+          <input type="text" matInput formControlName="email" placeholder="Email Id">
+          <mat-icon matSuffix> mail </mat-icon>
+          <mat-error>This is required.</mat-error>
+        </mat-form-field>
+      <!-- </div> -->
     </div>
 
     <div class="row">
