--- a/src/app/beat-module/patrolmen-confirm-dialog/patrolmen-confirm-dialog.component.html
+++ b/src/app/beat-module/patrolmen-confirm-dialog/patrolmen-confirm-dialog.component.html
@@ -1,3 +1,19 @@
-<p>
-  patrolmen-confirm-dialog works!
-</p>
+<!-- <h1 mat-dialog-title>
+  {{title}}
+</h1> -->
+
+<div mat-dialog-content>
+  <div class="row">
+    <button class="align-self-center mx-auto" style=" background-color: green; border-radius: 20px;" mat-icon-button>
+    <mat-icon style="color: white;">done</mat-icon></button>
+  </div>
+  <br>
+    <p>Do you want to save this?</p>
+</div>
+
+<div class="row">
+  <div mat-dialog-actions>
+    <button style=" background-color: #ff0000af;" mat-button (click)="onDismiss()"><mat-icon style="color: white;">close</mat-icon></button>
+    <button style=" background-color:green;" mat-raised-button (click)="onConfirm()"><mat-icon style="color: white;">done</mat-icon></button>
+  </div>
+</div>
